Add cinemas list

--- a/3sem/cw-it/html/main.html
+++ b/3sem/cw-it/html/main.html
@@ -9,7 +9,7 @@
 
     <nav class="container">
         <ul>
-            <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
+            <li class="nav-item"><a href="main.html" class="nav-link">Home</a></li>
             <li class="nav-item"><a href="index.html" class="nav-link">Work</a></li>
             <li class="nav-item"><a href="index.html" class="nav-link">About</a></li>
             <li class="nav-item"><a href="titres.html" class="nav-link">Contact</a></li>
