--- a/3sem/cw-it/html/titres.html
+++ b/3sem/cw-it/html/titres.html
@@ -7,10 +7,32 @@
 
 <body class="titres_body">
 
-    <div class="typewriter">
-        <h1>НИКИТОС Я ТЕБЯ ХОЧУ</h1>
-        <h1>ЕБИТЕ МЕНЯ В ЖОПУ</h1>
-    </div>
+    <nav class="container">
+        <ul>
+            <li class="nav-item"><a href="main.html" class="nav-link">Home</a></li>
+        </ul>
+    </nav>
+
+    <h1 class="cinemas">CINEMAS IN NOVOSIBIRSK</h1>
+
+    <nav class="table_cinemas">
+        <ul>
+            <li class="item_table_cinemas"><a href="https://www.royalpark.su/" class="text_table_cinemas">Синема Парк
+                    Ройял Парк</a></li><br>
+            <li class="item_table_cinemas"><a href="http://www.mfk-suncity.ru/" class="text_table_cinemas">Синема Парк
+                    Сан Сити</a></li><br>
+            <li class="item_table_cinemas"><a href="https://cinemapublic.ru" class="text_table_cinemas">Cinema
+                    Public</a></li><br>
+            <li class="item_table_cinemas"><a href="https://kinoatlac.ru/" class="text_table_cinemas">Киноатлас</a></li>
+            <br>
+            <li class="item_table_cinemas"><a href="https://vpobede.ru/home" class="text_table_cinemas">Победа</a></li>
+            <br>
+            <li class="item_table_cinemas"><a href="https://rassvetnsk.ru/" class="text_table_cinemas">Рассвет</a></li>
+            <br>
+            <li class="item_table_cinemas"><a href="https://kino-city.ru/" class="text_table_cinemas">Киносити
+                    Новосибирск</a></li><br>
+        </ul>
+    </nav>
 
 </body>
 
