Add simple href

--- a/3sem/cw-it/html/main.html
+++ b/3sem/cw-it/html/main.html
@@ -19,9 +19,10 @@
     <h1 class="billboard">Top films today</h1>
 
     <div class="top_films_table">
-        <img src="../icons/film_icons/revenant.jpg" class="icons_main_win">
-        <img src="../icons/film_icons/harry_potter.jpg" class="icons_main_win">
-        <img src="../icons/film_icons/cruella.jpeg" class="icons_main_win">
+        <a href="../html/revenant.html"><img src="../icons/film_icons/rev/revenant.jpg" class="icons_main_win"></a>
+        <a href="../html/harrypotter.html"><img src="../icons/film_icons/hp/harry_potter.jpg"
+                class="icons_main_win"></a>
+        <a href="../html/cruella.html"><img src="../icons/film_icons/cruella/cruella.jpeg" class="icons_main_win"></a>
     </div>
 
 </body>
