Add simple slide-show

--- a/3sem/cw-it/html/revenant.html
+++ b/3sem/cw-it/html/revenant.html
@@ -2,14 +2,21 @@
 
 <head>
     <link rel="stylesheet" type="text/css" href="../css/style_revenant.css">
-    <script> src = "" </script>
 </head>
 
 <body class="main_body">
 
+    <nav class="container">
+        <ul>
+            <li class="nav-item"><a href="main.html" class="nav-link">Home</a></li>
+            <li class="nav-item"><a href="titres.html" class="nav-link">Contact</a></li>
+        </ul>
+    </nav>
 
-    <!-- <h1 class="billboard">Top films today</h1> -->
+    <img id="imgbox" class="image_box" src="../icons/film_icons/rev/main.jpg">
 
+
+    <script src="../js/revenant.js"></script>
 </body>
 
 </html>
