Add list of actors

--- a/3sem/cw-it/html/revenant.html
+++ b/3sem/cw-it/html/revenant.html
@@ -15,6 +15,40 @@
 
     <img id="imgbox" class="image_box" src="../icons/film_icons/rev/main.jpg">
 
+    <div class="desc_of_revenant_right">The Revenant is a 2015 American adventure drama film directed by Alejandro G.
+        Iñárritu. The screenplay by Mark L. Smith and Iñárritu is based in part on Michael Punke's 2002 novel The
+        Revenant, which describes frontiersman Hugh Glass's experiences in 1823, and which is based on the 1915 poem The
+        Song of Hugh Glass. The film stars Leonardo DiCaprio and Tom Hardy. The film is also considered a remake
+        of the film Man in the Wilderness (1971).</div>
+
+    <video class="video_revenant" controls>
+        <source src="../video/revenant.mp4" type="video/mp4">
+    </video>
+
+    <div class="actors">Actors</div>
+    <ul class="actors_desc_1">
+        <li class="act">DiCaprio (Hugh Glass)
+        </li>
+        <li class="act">Hardy (John Fitzgerald)
+        </li>
+        <li class="act">Will Poulter (Bridger)
+        </li>
+        <li class="act">Domhnall (Henry)
+        </li>
+        <li class="act">Forrest (Hawk)
+        </li>
+    </ul>
+    <ul class="actors_desc_2">
+        <li class="act">Anderson (Anderson)
+        </li>
+        <li class="act">Joner (Murphy)
+        </li>
+        <li class="act">Burge (Stubby Bill)
+        </li>
+        <li class="act">Howard (Elk Dog)
+        </li>
+    </ul>
+
 
     <script src="../js/revenant.js"></script>
 </body>
