--- a/3sem/cw-it/html/cruella.html
+++ b/3sem/cw-it/html/cruella.html
@@ -2,14 +2,59 @@
 
 <head>
     <link rel="stylesheet" type="text/css" href="../css/style_cruella.css">
-    <script> src = "" </script>
 </head>
 
 <body class="main_body">
 
+    <audio controls id="music" autoplay>
+        <source src="../audio/cruella.mp3" type="audio/mp3">
+    </audio>
 
-    <!-- <h1 class="billboard">Top films today</h1> -->
+    <nav class="container">
+        <ul>
+            <li class="nav-item"><a href="main.html" class="nav-link">Home</a></li>
+            <li class="nav-item"><a href="titres.html" class="nav-link">Contact</a></li>
+        </ul>
+    </nav>
 
+    <img id="imgbox" class="image_box" src="../icons/film_icons/cruella/cruella.jpeg">
+
+    <div class="desc_of_revenant_right">Cruella is a 2021 American crime comedy film based on the character Cruella de
+        Vil from Dodie Smith's 1956 novel The Hundred and One Dalmatians. The film was directed by Craig Gillespie
+        with a screenplay by Dana Fox and Tony McNamara, from a story by Aline Brosh McKenna, Kelly Marcel, and Steve
+        Zissis. It is the third live-action adaptation in the 101 Dalmatians franchise, and serves as a reboot and
+        an alternate origin story for the title character. </div>
+
+    <video class="video_revenant" controls>
+        <source src="../video/cruella.mp4" type="video/mp4">
+    </video>
+
+    <div class="actors">Actors</div>
+    <ul class="actors_desc_1">
+        <li class="act">Stone (Cruella de Vil)
+        </li>
+        <li class="act">Tompson (Baroness)
+        </li>
+        <li class="act">Joel Fry (Jasper)
+        </li>
+        <li class="act">Baul Walter (Badun)
+        </li>
+        <li class="act">Andrew Leung (Jeffrey)
+        </li>
+    </ul>
+    <ul class="actors_desc_2">
+        <li class="act">Clevelend (Cruella (yng))
+        </li>
+        <li class="act">Kirby (Anita)
+        </li>
+        <li class="act">Kayvan (Roger)
+        </li>
+        <li class="act">Beecham (Catherine)
+        </li>
+    </ul>
+
+
+    <script src="../js/cruella.js"></script>
 </body>
 
 </html>
