--- a/3sem/cw-it/html/harrypotter.html
+++ b/3sem/cw-it/html/harrypotter.html
@@ -1,15 +1,59 @@
 <!DOCTYPE html>
 
 <head>
-    <link rel="stylesheet" type="text/css" href="../css/style_hp.css">
-    <script> src = "" </script>
+    <link rel="stylesheet" type="text/css" href="../css/style_revenant.css">
 </head>
 
 <body class="main_body">
 
+    <audio controls id="music" autoplay>
+        <source src="../audio/hp.mp3" type="audio/mp3">
+    </audio>
 
-    <!-- <h1 class="billboard">Top films today</h1> -->
+    <nav class="container">
+        <ul>
+            <li class="nav-item"><a href="main.html" class="nav-link">Home</a></li>
+            <li class="nav-item"><a href="titres.html" class="nav-link">Contact</a></li>
+        </ul>
+    </nav>
 
+    <img id="imgbox" class="image_box" src="../icons/film_icons/hp/harry_potter.jpg">
+
+    <div class="desc_of_revenant_right">Harry Potter and the Philosopher's Stone (released in the United States, India
+        and the Philippines as Harry Potter and the Sorcerer's Stone) is a 2001 fantasy film directed by Chris Columbus
+        and distributed by Warner Bros. Pictures, based on J. K. Rowling's 1997 novel of the same name. Produced by
+        David Heyman and written by Steve Kloves, it is the first instalment of the Harry Potter film series.</div>
+
+    <video class="video_revenant" controls>
+        <source src="../video/hp.mp4" type="video/mp4">
+    </video>
+
+    <div class="actors">Actors</div>
+    <ul class="actors_desc_1">
+        <li class="act">Radcliffe (Harry Potter)
+        </li>
+        <li class="act">Watson (Hermione)
+        </li>
+        <li class="act">Grint (Ron)
+        </li>
+        <li class="act">Felton (Malfoy)
+        </li>
+        <li class="act">Lewis (Neville)
+        </li>
+    </ul>
+    <ul class="actors_desc_2">
+        <li class="act">Rickman (Severus)
+        </li>
+        <li class="act">Smith (Miner)
+        </li>
+        <li class="act">Lynch (Lovegood)
+        </li>
+        <li class="act">Wright (Ginny)
+        </li>
+    </ul>
+
+
+    <script src="../js/hp.js"></script>
 </body>
 
 </html>
