--- a/3sem/cw-it/html/main.html
+++ b/3sem/cw-it/html/main.html
@@ -2,10 +2,14 @@
 
 <head>
     <link rel="stylesheet" type="text/css" href="../css/style.css">
-    <script> src = "script.js" </script>
 </head>
 
 <body class="main_body">
+
+
+
+    <div id="clock" class="clock" onload="currentTime()"></div>
+
 
     <nav class="container">
         <ul>
@@ -23,6 +27,9 @@
         <a href="../html/cruella.html"><img src="../icons/film_icons/cruella/cruella.jpeg" class="icons_main_win"></a>
     </div>
 
+
+    <script src="../js/script.js">
+    </script>
 </body>
 
 </html>
