--- a/3sem/cw-it/html/revenant.html
+++ b/3sem/cw-it/html/revenant.html
@@ -6,6 +6,16 @@
 
 <body class="main_body">
 
+
+
+    <div id="clock" onload="currentTime()"></div>
+
+
+
+    <audio controls id="music" autoplay>
+        <source src="../audio/rev.mp3" type="audio/mp3">
+    </audio>
+
     <nav class="container">
         <ul>
             <li class="nav-item"><a href="main.html" class="nav-link">Home</a></li>
