End of site at all

--- a/3sem/cw-it/html/cruella.html
+++ b/3sem/cw-it/html/cruella.html
@@ -25,7 +25,7 @@
         Zissis. It is the third live-action adaptation in the 101 Dalmatians franchise, and serves as a reboot and
         an alternate origin story for the title character. </div>
 
-    <video class="video_revenant" controls>
+    <video class="video_revenant" controls autoplay muted>
         <source src="../video/cruella.mp4" type="video/mp4">
     </video>
 
