--- a/3sem/cw-it/html/harrypotter.html
+++ b/3sem/cw-it/html/harrypotter.html
@@ -24,7 +24,7 @@
         and distributed by Warner Bros. Pictures, based on J. K. Rowling's 1997 novel of the same name. Produced by
         David Heyman and written by Steve Kloves, it is the first instalment of the Harry Potter film series.</div>
 
-    <video class="video_revenant" controls>
+    <video class="video_revenant" controls autoplay muted>
         <source src="../video/hp.mp4" type="video/mp4">
     </video>
 
