--- a/3sem/cw-it/html/revenant.html
+++ b/3sem/cw-it/html/revenant.html
@@ -31,7 +31,7 @@
         Song of Hugh Glass. The film stars Leonardo DiCaprio and Tom Hardy. The film is also considered a remake
         of the film Man in the Wilderness (1971).</div>
 
-    <video class="video_revenant" controls>
+    <video class="video_revenant" controls autoplay muted>
         <source src="../video/revenant.mp4" type="video/mp4">
     </video>
 
