--- a/3sem/cw-it/html/main.html
+++ b/3sem/cw-it/html/main.html
@@ -21,10 +21,10 @@
     <h1 class="billboard">Top films today</h1>
 
     <div class="top_films_table">
-        <a href="../html/revenant.html"><img src="../icons/film_icons/rev/revenant.jpg" class="icons_main_win"></a>
+        <a href="../html/revenant.html"><img src="../icons/film_icons/rev/revenant.jpg" class="icons_main_win_1"></a>
         <a href="../html/harrypotter.html"><img src="../icons/film_icons/hp/harry_potter.jpg"
-                class="icons_main_win"></a>
-        <a href="../html/cruella.html"><img src="../icons/film_icons/cruella/cruella.jpeg" class="icons_main_win"></a>
+                class="icons_main_win_2"></a>
+        <a href="../html/cruella.html"><img src="../icons/film_icons/cruella/cruella.jpeg" class="icons_main_win_3"></a>
     </div>
 
 
